Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 
 <p>The importer tab allows you to import nanoentities </p>
 
+<p><img src="https://raw.githubusercontent.com/ServiceCutter/servicecutter.github.io/master/screenshot-menu-import.png" alt="Screenshot Menu Import"></p>
+
 <p>Only import, no edit.
 First the domain model. Then enrich it with user representations.</p>
 
@@ -58,6 +60,8 @@ First the domain model. Then enrich it with user representations.</p>
 
 <h2>
 <a id="service-cut-analysis" class="anchor" href="#service-cut-analysis" aria-hidden="true"><span class="octicon octicon-link"></span></a>Service Cut Analysis</h2>
+
+<p><img src="https://raw.githubusercontent.com/ServiceCutter/servicecutter.github.io/master/screenshot-solver-import.png" alt="Screenshot Menu Solver"></p>
 
 <h3>
 <a id="algorithms" class="anchor" href="#algorithms" aria-hidden="true"><span class="octicon octicon-link"></span></a>Algorithms</h3>
