Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <p>To begin with, a domain model in the form of an <a href="https://en.wikipedia.org/wiki/Entity%E2%80%93relationship_model">ERM</a> needs to be imported.</p>
 
-<p>IMAGE MODEL</p>
+<p><img src="https://raw.githubusercontent.com/ServiceCutter/servicecutter.github.io/master/screenshot-import-model.png" alt="Screenshot Upload Model"></p>
 
 <p>A simple domain model can be found in the samples folder. Let's try with <code>ServiceCutter/Samples/ddd_1_model.json</code> for now.</p>
 
@@ -63,6 +63,8 @@
 <a id="user-representations" class="anchor" href="#user-representations" aria-hidden="true"><span class="octicon octicon-link"></span></a>User Representations</h3>
 
 <p>To suggest good service cuts, we need more data. The file <code>ServiceCutter/Samples/ddd_2_user_representations.json</code> enhances the domain model with Use Cases, characteristics of the nanoentities and responsible roles.</p>
+
+<p><img src="https://raw.githubusercontent.com/ServiceCutter/servicecutter.github.io/master/screenshot-import-userrepresentations.png" alt="Screenshot upload user representations"></p>
 
 <p>Now we have all the data we need. Let's continue with the analysis.</p>
 
