Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -118,11 +118,15 @@ The "Epidemic Label Propagation" by <a href="http://arxiv.org/pdf/0808.2633.pdf"
 
 <ul>
 <li>An connection between the services is drawn when a use case exists that uses nanoentities of both services.</li>
+</ul>
+
+<p><img src="https://raw.githubusercontent.com/ServiceCutter/servicecutter.github.io/master/screenshot-solver-analysis-example.png" alt="Screenshot Service Connection"></p>
+
+<ul>
 <li>You can click on a service or a connection between two services and the Service Cutter will display the Published Language of the selected service.</li>
 </ul>
 
-<p><img src="https://raw.githubusercontent.com/ServiceCutter/servicecutter.github.io/master/screenshot-solver-analysis-service.png" alt="Screenshot Published Language">
-<img src="https://raw.githubusercontent.com/ServiceCutter/servicecutter.github.io/master/screenshot-solver-analysis-example.png" alt="Screenshot Service Connection"></p>
+<p><img src="https://raw.githubusercontent.com/ServiceCutter/servicecutter.github.io/master/screenshot-solver-analysis-service.png" alt="Screenshot Published Language"></p>
 
 <p><em>Hint: The analysis mode is only available with use cases present.</em></p>
 
