Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -38,12 +38,11 @@
 <h2>
 <a id="core-concepts" class="anchor" href="#core-concepts" aria-hidden="true"><span class="octicon octicon-link"></span></a>Core Concepts</h2>
 
-<p>TODOD</p>
-
 <ul>
-<li>Nanoentity</li>
-<li>User Representation</li>
-<li>Coupling Criterion</li>
+<li>
+<strong>Nanoentities</strong> (<a href="https://github.com/ServiceCutter/ServiceCutter/wiki/Concepts#nanoentity">see definition</a>) are the building blocks of services.</li>
+<li>A <strong>User Representation</strong> is a concept familiar to the architect that can be used to feed the criteria information into the Service Cutter.</li>
+<li>A <strong>Coupling Criterion</strong> describes an architecturally significant requirement why two nanoentities should or should not be owned by the same service. These criteria define the semantic model on which the Service Cutter is built on.</li>
 </ul>
 
 <h2>
@@ -155,6 +154,15 @@ The "Epidemic Label Propagation" by <a href="http://arxiv.org/pdf/0808.2633.pdf"
 <li>
 <a href="http://martinfowler.com/bliki/MonolithFirst.html">"MonolithFirst"</a> by Martin Fowler<br>
 </li>
+</ul>
+
+<h2>
+<a id="further-resource" class="anchor" href="#further-resource" aria-hidden="true"><span class="octicon octicon-link"></span></a>Further Resource</h2>
+
+<ul>
+<li><a href="https://github.com/ServiceCutter/ServiceCutter/wiki">Wiki</a></li>
+<li><a href="https://github.com/ServiceCutter/ServiceCutter">Service Cutter source code</a></li>
+<li>Bachelor Thesis by <a href="https://github.com/koelbener">Lukas Kölbener</a> and <a href="https://github.com/gysel">Michael Gysel</a> (not yet published)</li>
 </ul>
         </section>
 
