Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h1>
 <a id="service-cutter" class="anchor" href="#service-cutter" aria-hidden="true"><span class="octicon octicon-link"></span></a>Service Cutter</h1>
 
-<p>The Service Cutter suggests a structured way to service decomposition. This tutorial helps you to work with the Service Cutter.</p>
+<p>The Service Cutter suggests a structured way to service decomposition. This tutorial helps you to work with the Service Cutter. You should have access to a test installation or install the Service Cutter on your machine in order to try the samples.</p>
 
 <p>You will learn how to import data into the Service Cutter and analyze service cuts. The last section outlines two possible usage scenarios.</p>
 
@@ -160,7 +160,8 @@ The "Epidemic Label Propagation" by <a href="http://arxiv.org/pdf/0808.2633.pdf"
 <a id="further-resource" class="anchor" href="#further-resource" aria-hidden="true"><span class="octicon octicon-link"></span></a>Further Resource</h2>
 
 <ul>
-<li><a href="https://github.com/ServiceCutter/ServiceCutter/wiki">Wiki</a></li>
+<li>
+<a href="https://github.com/ServiceCutter/ServiceCutter/wiki">Wiki</a> with more details</li>
 <li><a href="https://github.com/ServiceCutter/ServiceCutter">Service Cutter source code</a></li>
 <li>Bachelor Thesis by <a href="https://github.com/koelbener">Lukas Kölbener</a> and <a href="https://github.com/gysel">Michael Gysel</a> (not yet published)</li>
 </ul>
