Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ The "Epidemic Label Propagation" by <a href="http://arxiv.org/pdf/0808.2633.pdf"
 </ul>
 
 <h2>
-<a id="further-resource" class="anchor" href="#further-resource" aria-hidden="true"><span class="octicon octicon-link"></span></a>Further Resource</h2>
+<a id="further-resources" class="anchor" href="#further-resources" aria-hidden="true"><span class="octicon octicon-link"></span></a>Further Resources</h2>
 
 <ul>
 <li>
