Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
 <p>You will learn how to import data into the Service Cutter and analyze service cuts. The last section outlines two possible usage scenarios.</p>
 
 <h1>
+<a id="service-cutter-benefits" class="anchor" href="#service-cutter-benefits" aria-hidden="true"><span class="octicon octicon-link"></span></a>Service Cutter Benefits</h1>
+
+<ul>
+<li>By requesting different user representations, an architect is challenged to analyze which user representations and characteristics are relevant in his system. He might use the user representations as a check list for requirements engineering.</li>
+<li>The user representations and coupling criteria can be used to educate junior architects or students on the driving forces of service decomposition.</li>
+<li>The Service Cutter provides candidate service cuts based on the defined user representations. With these candidate service cuts the architects expectations of the number of services and their definition is either verified or challenged. </li>
+<li>Use cases are assigned to their responsible service. The published language between services is displayed in order to assist the development of services and their interfaces to each other.</li>
+<li>By storing the candidate service cuts, architectural decisions can be persisted and documented (not yet implemented).</li>
+</ul>
+
+<h1>
 <a id="core-concepts" class="anchor" href="#core-concepts" aria-hidden="true"><span class="octicon octicon-link"></span></a>Core Concepts</h1>
 
 <ul>
