--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ The "Epidemic Label Propagation" by <a href="http://arxiv.org/pdf/0808.2633.pdf"
 <li>
 <a href="https://github.com/ServiceCutter/ServiceCutter/wiki">Wiki</a> with more details</li>
 <li><a href="https://github.com/ServiceCutter/ServiceCutter">Service Cutter source code</a></li>
-<li>Bachelor Thesis by <a href="https://github.com/koelbener">Lukas Kölbener</a> and <a href="https://github.com/gysel">Michael Gysel</a> (not yet published)</li>
+<li>Bachelor Thesis by <a href="https://github.com/koelbener">Lukas Kölbener</a> and <a href="https://github.com/gysel">Michael Gysel</a> (<a href="http://eprints.hsr.ch/476/1/BachelorThesisRev.pdf" target="_blank">PDF</a>)</li>
 </ul>
         </section>
 
