--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@ The "Epidemic Label Propagation" by <a href="http://arxiv.org/pdf/0808.2633.pdf"
 <li>
 <a href="https://github.com/ServiceCutter/ServiceCutter/wiki">Wiki</a> with more details</li>
 <li><a href="https://github.com/ServiceCutter/ServiceCutter">Service Cutter source code</a></li>
-<li>Bachelor Thesis by <a href="https://github.com/koelbener">Lukas Kölbener</a> and <a href="https://github.com/gysel">Michael Gysel</a> (<a href="http://eprints.hsr.ch/476/1/BachelorThesisRev.pdf" target="_blank">PDF</a>)</li>
+<li><a href="https://www.researchgate.net/profile/Olaf_Zimmermann2/publication/307873263_Service_Cutter_A_Systematic_Approach_to_Service_Decomposition/links/5c8f6b2392851c1df948716d/Service-Cutter-A-Systematic-Approach-to-Service-Decomposition.pdf" target="_blank">ESOCC 2016 article on Service Cutter (authors copy)</a></li>
+<li>Bachelor thesis by <a href="https://github.com/koelbener">Lukas Kölbener</a> and <a href="https://github.com/gysel">Michael Gysel</a> (<a href="http://eprints.hsr.ch/476/1/BachelorThesisRev.pdf" target="_blank">PDF</a>)</li>
 </ul>
         </section>
 
